--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.99MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-311.3KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-195.2KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 3025, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3035, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-335.4KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇦 加拿大-939.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-8.48MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.31MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇭🇰 香港-964.4KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: TWpNNU1qTXhOVEl3TURZdWJXbGpjbTl6YjJaMExtTnZiUQ}
   - {name: 🇨🇳 中国-245.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇮🇳 印度-240.2KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-278.8KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-240.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
