--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,66 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.44MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.29MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.89MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-10.66MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.21MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-551.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +80,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
