--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,66 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.21MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-551.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-530.3KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-307.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-658.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-496.2KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -80,9 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-496.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
